S3のパスを移動

--- a/content/blog/2017/11/05.md
+++ b/content/blog/2017/11/05.md
@@ -41,7 +41,7 @@ Herokuは本来Aレコードの設定ができないので、www.okcamp.meとい
 
 おそらく、Sign upのボタンから取得したドメインの入力はスムーズにいけると思います。入力していくとDNS設定をこれにしてくれという画面が表示されます。
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/blog/2017-11-06_13-49-13.png)
+![](/images/2017-11-06_13-49-13.png)
 
 Change Nameservers toに表示されている項目をムームードメインに設定します。
 
@@ -61,7 +61,7 @@ CloudflareのDNSタブからDNSの設定をします。
 
 次にSSLの設定です。Cryptoのタブへ移動し、SSLの設定をFullに変更します。
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/blog/2017-11-06_13-35-06.png)
+![](/images/2017-11-06_13-35-06.png)
 
 以上でhttps化の設定が完了しました。長い時にはDNSの浸透に1日ぐらいかかるらしいので、しばらくしてから取得したドメインをhttpsでアクセスしてみてください。
 
