--- a/content/blog/2018/02/21.md
+++ b/content/blog/2018/02/21.md
@@ -76,7 +76,7 @@ driver.navigate.to 'https://www.google.co.jp/'
 driver.save_screenshot './google.png'
 ```
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/blog/2018-02-21_12-36-59.png)
+![](/images/2018-02-21_12-36-59.png)
 
 無事にいけました🎉
 
@@ -91,13 +91,13 @@ driver.navigate.to YAHOO_AUTH_URL
 driver.save_screenshot './yahoo-1.png'
 ```
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/blog/2018-02-21_12-48-18.png)
+![](/images/2018-02-21_12-48-18.png)
 
 いけてますね。なので、次はIDを入力します。
 
 IDの入力先などを調べる時は、ChromeのWEBデベロッパーツールのDOMインスペクターなどで該当のinput要素を調べてみます。
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/blog/2018-02-21_14-21-41.png)
+![](/images/2018-02-21_14-21-41.png)
 
 すると、`<input type="text" name="login" id="username" value="" spellcheck="false" class=" hasBtnClear" data-rapid_p="1">`と、name属性がloginという事が分かりました。あとついでに「次へ」ボタンも同様にDOMインスペクターでname属性などを調べておきます。
 
@@ -110,7 +110,7 @@ driver.find_element(:name, 'btnNext').click
 driver.save_screenshot './yahoo-2.png'
 ```
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/blog/2018-02-21_14-29-07.png)
+![](/images/2018-02-21_14-29-07.png)
 
 いい感じです😄
 
@@ -125,7 +125,7 @@ driver.save_screenshot './yahoo-3.png'
 
 すると、認証コードが表示されました。
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/blog/2018-02-21_15-03-20.png)
+![](/images/2018-02-21_15-03-20.png)
 
 最後にこの表示されているエレメントの中身を取得します。
 
