--- a/content/blog/2019/01/29-092553.md
+++ b/content/blog/2019/01/29-092553.md
@@ -14,11 +14,11 @@ image: 2019-01-29_10-36-43.png
 
 サイトを開いてどこに何を書けばいいか分かりやすく、言語はJavaScript/Ruby/.NETから選べます。
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/_2019-01-29_10.32.30.png)
+![](/images/_2019-01-29_10.32.30.png)
 
 また、ページ下部にREPLACEというフィールドがあるのでクリックすると、変換後の文字列も表示することができるようになっています。
 
-![](https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-01-29_10-35-17.png)
+![](/images/2019-01-29_10-35-17.png)
 
 Sign upすることで保存ができますが、非公開などはないようなのでご注意ください。
 
