--- a/content/blog/2019/03/25-114316.md
+++ b/content/blog/2019/03/25-114316.md
@@ -72,7 +72,7 @@ image: 2019-03-26_17-36-06.png
 
 上記のように、まずはコイルを出したい。<i class="ptcg-e m">M</i>だけで山札から<i class="ptcg-e m">M</i>エネ3枚サーチが非常に強い。それでドローしてきた大量の<i class="ptcg-e m">M</i>を上手に使えるのが進化先のジバコイルだなと。
 
-<img src="https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-25_16-04-48.png" class="tcg-card">
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035540_P_JIBAKOIRU.jpg" class="tcg-card">
 
 今まではアローラダグトリオで手札から直接<i class="ptcg-e m">M</i>を使うしかありませんでしたが、ジバコイルが自分の場に入れば、好きなだけ<i class="ptcg-e m">M</i>エネをポケモン付ける事ができるようになります。
 
@@ -80,23 +80,23 @@ image: 2019-03-26_17-36-06.png
 
 初期デッキだとヒードランが<i class="ptcg-e m">M</i><i class="ptcg-e m">M</i>をトラッシュして130ダメージというパターンがありますが、ジバコイルがあるならもうちょっと火力を出したい。という事でネクロズマたそがれのたてがみGXをチョイス。
 
-<img src="https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-25_16-22-25.png" class="tcg-card">
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035546_P_NEKUROZUMATASOGARENOTATEGAMIGX.jpg" class="tcg-card">
 
 今の環境上位にウルトラネクロズマGXがいると思うのですが、<i class="ptcg-e p">P</i>エネまでうまく揃える自信もカードもないのと、なんか環境上位のデッキを安易に使いたくないという天の邪鬼精神でこの子（ネクロズマたそがれのたてがみGX）をピックしました。だって安かったんだもの……ｗ
 
 あとウルトラネクロズマだとドラゴン属性ですが、ネクロズマたそがれのたてがみだと鋼属性なので、今度鋼シナジーを何かしたい時に便利かなと。
 
-<img src="https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-25_16-25-21.png" class="tcg-card">
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035564_P_URUTORANEKUROZUMAGX.jpg" class="tcg-card">
 
 ## 総合力アップのルカリオ＆メルメタルGX
 
 最近発売された拡張パック『フルメタルウォール』に集力されているルカリオ＆メルメタルGXが、山札から<i class="ptcg-e m">M</i>サーチもある上に汎用性のあるGXワザで、さらに安かったので採用しましたｗ
 
-<img src="https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-25_16-37-41.png" class="tcg-card">
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9b/036285_P_RUKARIOMERUMETARUGX.jpg" class="tcg-card">
 
 GXワザを使えば、試合中全てのワザダメージを-30できます。まだ入れていませんが、鋼鉄のフライパンなど使えばかなり硬い状態になれます。
 
-<img src="https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-25_16-39-18.png" class="tcg-card">
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM8b/035584_T_KOUTETSUNOFURAIPAN.jpg" class="tcg-card">
 
 <i class="ptcg-e m">M</i>デッキは盤面を作るのに若干時間がかかるタイプだと思うので、このカードまたはGX効果の効果で耐えながら豊富な<i class="ptcg-e m">M</i>エネを使える盤面を作る感じですね。
 
@@ -104,11 +104,11 @@ GXワザを使えば、試合中全てのワザダメージを-30できます。
 
 アローラディグダは元々入ってる子よりも、「なかまをよぶ」ワザを持った子の方が使いやすいので、そちらに入れ替え。上記のルカリオ＆メルメタルGXやコイル、ネクロズマたそがれのたてがみGXを呼べるのはデカい。
 
-<img src="https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-25_16-06-03.png" class="tcg-card">
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM7a/035196_P_ARORADEIGUDA.jpg" class="tcg-card">
 
 さらにアローダダグトリオも、特性持ちの子に変更しておきます。
 
-<img src="https://s3-ap-northeast-1.amazonaws.com/t4traw/ss/2019-03-25_16-13-35.png" class="tcg-card">
+<img src="https://www.pokemon-card.com/assets/images/card_images/large/SM9b/036287_P_ARORADAGUTORIO.jpg" class="tcg-card">
 
 ## 気になるメタグロスGX
 
