--- a/content/blog/2019/08/14-100000.md
+++ b/content/blog/2019/08/14-100000.md
@@ -16,80 +16,80 @@ image: Dhsyud2iyT669bb2RHVvQXHQefzedi6V.png
 <!--more-->
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>じゃあプログラミング書くのはじめまーす</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>ワーイ</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>まずおさらいだけど、プログラムってどんなモノか覚えてる？</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>なんか、いろんなモノを動かす仕組みがプログラミング</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>そうそう。いろんなモノがプログラミングで作られた仕組みで動いてるね。例えばゲームなんかがそう。</p>
   <p>で、ゲームってボタンとか押すと、○○が動くってなってるでしょ？</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>Bボタン押すとジャンプみたいな？</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>まあそんな感じ。あとXをおすとメニューが開いてとか。で、メニューの中から選んだりするでしょ？</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>うん</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>そういう見えている部分と、見えてる所を動かして動く仕組みがあるんだけど、まあいいや。最初はそういう見えてる部分を作りましょう</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>はい</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>作るのはポケモンクイズだけど、どんな画面にするか考えた？</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>かいてみる！</p>
 </div>
 
 ここで、いったん紙へどんな画面にするかを書いてみます。
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>ふむふむ。大体やりたい事は書けたね。あとは現在のポイントとかあった方がいいね</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>じゃあそれも書く</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>おっけー。じゃあ実際に書いてみましょう。ひとまずパパのコレを自分でキーボードで打ってみて</p>
 </div>
 
@@ -117,23 +117,23 @@ image: Dhsyud2iyT669bb2RHVvQXHQefzedi6V.png
 ```
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>できた</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>いいね。こういう風にh1と記号みたいな特別な文字で囲むと、本のタイトルみたいに大きな文字になったり変わったりするよ。文字に効果を与える感じだね</p>
 </div>
 
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>他にもいっぱいある？</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>あるけど、それはまた今度教えます😁 とりあえず今日はここまで！次は後ろの仕組みのプログラミングを書いていくよ！</p>
 </div>
 
