--- a/content/blog/2019/08/27-110000.md
+++ b/content/blog/2019/08/27-110000.md
@@ -38,17 +38,17 @@ image: f3ihadZW6MObRaUrSo3SRESm5ShfJhOE.png
 ライチュウを簡単に倒されるようになると、エネも無くなってきて火力がだせず厳しい……。しかし。
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>パパ、『メイ』引いた。あれ出していい？</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>イイネ！いこう！</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>『メイ』使って、山札から『レシラム＆ゼクロム』『エネルギー付け替え』『炎エネルギー』を持ってきます</p>
 </div>
 
@@ -112,21 +112,21 @@ image: f3ihadZW6MObRaUrSo3SRESm5ShfJhOE.png
 ここで、なんとか耐え、さっきみたいにレシゼクを使いたいシーンだけど……。
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>パパ、もうレシゼク出していい？</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>ちょっとまって、まだ早い。らいえんむそう使うと、エネがトラッシュに行っちゃって、後半きびしくなっちゃうよ</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>でも、ジガルデGX倒す前にピカチュウ・ライチュウが全部死んじゃう</p>
 </div>
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>あー、グズマは持ってくる手段がないかぁ。あとでタケシのガッツかエネルギーリサイクル引くのを祈るしかないね。君の好きなようにやってみな！</p>
 </div>
 
@@ -180,7 +180,7 @@ image: f3ihadZW6MObRaUrSo3SRESm5ShfJhOE.png
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>え？</p>
 </div>
 
@@ -191,7 +191,7 @@ image: f3ihadZW6MObRaUrSo3SRESm5ShfJhOE.png
 ぼくのベンチのポケモン、一気に3体きぜつで敗北。すがすがしいほどの焼け野原ｗ
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>めつぼうのひかりGXありましたねｗ 完全に忘れてましたｗ</p>
 </div>
 
@@ -201,7 +201,7 @@ image: f3ihadZW6MObRaUrSo3SRESm5ShfJhOE.png
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>めっちゃ楽しかったです！ありがとうございました！</p>
 </div>
 
