--- a/content/blog/_draft/14-110934.md
+++ b/content/blog/_draft/14-110934.md
@@ -12,32 +12,32 @@ draft: true
 
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>分かった</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>で、こういう風に問題をぜーんぶ書いていくと大変でしょ？今は全部で10問って考えてるけど、これが100問とかだと100回これを書かないといけない</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>確かに。むりだね</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>なので、これを簡単にするのがプログラムってわけです。</p>
 </div>
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>へー</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>じゃあ今日はもんだいの番号をプログラムで動かしてみましょう。さっき書いた文字の下にコレを書いてください</p>
 </div>
 
@@ -53,12 +53,12 @@ draft: true
 ```
 
 <div class="balloon_left">
-  <div class="img"><img src="https://t4traw.s3-ap-northeast-1.amazonaws.com/dropshare/ZdtZkn0kw7W45bXvjPXAw6s9w06EggM8.jpg">ムスメ</div>
+  <div class="img"><img src="/images/musume.png">ムスメ</div>
   <p>かけたよー</p>
 </div>
 
 <div class="balloon_right">
-  <div class="img"><img src="https://avatars1.githubusercontent.com/u/6788936?v=4">パッパ</div>
+  <div class="img"><img src="/images/t4traw.jpg">パッパ</div>
   <p>書けてるね。</p>
 </div>
 
