基本無料という文字を追加

--- a/content/blog/2019/12/23-151119.md
+++ b/content/blog/2019/12/23-151119.md
@@ -15,7 +15,7 @@ image: 20191223-152001.jpg
 
 月額課金制のゲームからアイテム課金などのゲームが出始めた当時、衝撃的な出会いをしたゲームの1つがDJMAX ONLINEです。
 
-元々BM98はプレイしたこともありますが、このクオリティがサクっとフレンドと遊べるというのに衝撃を受けました。なんといっても曲が良い。
+元々BM98はプレイしたこともありますが、このクオリティが基本無料でサクっとフレンドと遊べるというのに衝撃を受けました。なんといっても曲が良い。
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ghLCHAHv-VY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
