一部表現を修正

--- a/content/blog/2019/12/23-151119.md
+++ b/content/blog/2019/12/23-151119.md
@@ -13,7 +13,7 @@ image: 20191223-152001.jpg
 
 <!--more-->
 
-月額課金制のゲームからアイテム課金などのゲームが出始めた当時、衝撃的な出会いをしたゲームの1つがDJMAX ONLINEです。
+月額課金制のオンラインゲームから、基本無料でアイテム課金などのゲームが出始めた時代でした。「こんなのも無料でできるのかー！」と、様々なオンラインゲームがリリースされる中、衝撃的な出会いをしたゲームの1つがDJMAX ONLINEです。
 
 元々BM98はプレイしたこともありますが、このクオリティが基本無料でサクっとフレンドと遊べるというのに衝撃を受けました。なんといっても曲が良い。
 
