カテゴリー名を本から書評に変更

--- a/content/2019/03/07-085119.md
+++ b/content/2019/03/07-085119.md
@@ -3,9 +3,9 @@ title: 本好きの下剋上(香月美夜)を読んだ感想
 date: 2019-03-07T12:00:00+09:00
 archives: ["2019/03"]
 categories:
-  - 本
+  - 書評
 tags:
-  - 本好きの下剋上
+  - 書評好きの下剋上
   - 香月美夜
   - なろう系
 image: /images/2019-03-07_11-58-15.png
