--- a/content/2014/11/20.md
+++ b/content/2014/11/20.md
@@ -1,5 +1,5 @@
 ---
-title: "gemの管理をrbenv-gemset+bundlerでする事にした"
+title: "gemの管理をrbenv-gemsetとbundlerでする事にした"
 date: 2014-11-20
 archives: ["2014/11"]
 categories:
