--- a/content/2016/08/03.md
+++ b/content/2016/08/03.md
@@ -1,5 +1,5 @@
 ---
-title: Itamae自分メモ[2]　Ruby(rbenv+ruby-build)のセットアップ
+title: Itamae自分メモ[2]　Ruby(rbenv＆ruby-build)のセットアップ
 date: 2016-08-03
 archives: ["2016/08"]
 categories:
@@ -43,7 +43,7 @@ package "ruby-rdoc"
 package "ruby-devel"
 package "epel-release"
 package "gcc"
-package "gcc-c++"
+package "gcc-c＆+"
 package "make"
 package "automake"
 package "autoconf"
