--- a/content/2016/11/30.md
+++ b/content/2016/11/30.md
@@ -1,5 +1,5 @@
 ---
-title: RSpec3+Capybara+PoltergeistでjavascriptのconfirmのOKが押せなかった問題の解決
+title: RSpec3&Capybara&PoltergeistでjavascriptのconfirmのOKが押せなかった問題の解決
 date: 2016-11-30
 archives: ["2016/11"]
 categories:
