--- a/content/2018/02/21.md
+++ b/content/2018/02/21.md
@@ -1,5 +1,5 @@
 ---
-title: Ruby + SeleniumでヘッドレスChromeを動かしてWEBページをスクレイピングする
+title: Ruby&SeleniumでヘッドレスChromeを動かしてWEBページをスクレイピングする
 date: 2018-02-21
 archives: ["2018/02"]
 categories:
