--- a/content/2018/07/26.md
+++ b/content/2018/07/26.md
@@ -1,5 +1,5 @@
 ---
-title: CentOS7にnginx+puma+Postgresql+Let's Encrypt+Rails5.2環境をitamaeで作成する
+title: CentOS7にnginx&puma&Postgresql&Let's Encrypt&Rails5.2環境をitamaeで作成する
 date: 2018-07-26
 archives: ["2018/07"]
 categories:
