--- a/content/2018/12/06.md
+++ b/content/2018/12/06.md
@@ -1,5 +1,5 @@
 ---
-title: CentOS7にPostfix+Dovecot+Let's Enclypt環境をitamaeで構築する[0]
+title: CentOS7にPostfix & Dovecot & Let's Enclypt環境をitamaeで構築する[0]
 date: 2018-12-06
 archives: ["2018/12"]
 categories:
