--- a/content/2018/12/08.md
+++ b/content/2018/12/08.md
@@ -1,5 +1,5 @@
 ---
-title: CentOS7にPostfix+Dovecot+Let's Enclypt環境をitamaeで構築する[2]
+title: CentOS7にPostfix & Dovecot & Let's Enclypt環境をitamaeで構築する[2]
 date: 2018-12-08
 archives: ["2018/12"]
 categories:
