--- a/content/2016/03/31.md
+++ b/content/2016/03/31.md
@@ -1,5 +1,5 @@
 ---
-title: middleman+gulpで静的サイトのテンプレート的な物を作ってみる
+title: middleman＆gulpで静的サイトのテンプレート的な物を作ってみる
 date: 2016-03-31
 archives: ["2016/03"]
 categories:
