--- a/content/2016/07/20.md
+++ b/content/2016/07/20.md
@@ -1,5 +1,5 @@
 ---
-title: Itamae自分メモ[0]　Rails+nginx+puma+CentOSのプロビジョニングをしてみるので基本的な設定とか準備
+title: Itamae自分メモ[0]　Rails＆nginx＆puma＆CentOSのプロビジョニングをしてみるので基本的な設定とか準備
 date: 2016-07-20
 archives: ["2016/07"]
 categories:
