--- a/content/2017/11/27.md
+++ b/content/2017/11/27.md
@@ -1,5 +1,5 @@
 ---
-title: Railsの画像アップロードをCarrierwave + S3からCarrierwave + Cloudinaryに移行しようとして詰まった話
+title: Railsの画像アップロードをCarrierwave&S3からCarrierwave&Cloudinaryに移行しようとして詰まった話
 date: 2017-11-27
 archives: ["2017/11"]
 categories:
