--- a/content/2018/02/05.md
+++ b/content/2018/02/05.md
@@ -1,5 +1,5 @@
 ---
-title: Rails 5.1 + Ruby 2.5.0 + Vue.jsの開発環境をつくる
+title: Rails 5.1&Ruby 2.5.0&Vue.jsの開発環境をつくる
 date: 2018-02-05
 archives: ["2018/02"]
 categories:
