--- a/content/2018/12/04.md
+++ b/content/2018/12/04.md
@@ -1,5 +1,5 @@
 ---
-title: サイト引っ越しました。Hugo + Netlify + ムームードメインで取得した独自ドメインの運用に切り替えました
+title: サイト引っ越しました。Hugo&Netlify&ムームードメインで取得した独自ドメインの運用に切り替えました
 date: 2018-12-04T16:04:55+09:00
 archives: ["2018/12"]
 categories:
