--- a/content/2018/12/07.md
+++ b/content/2018/12/07.md
@@ -1,5 +1,5 @@
 ---
-title: CentOS7にPostfix+Dovecot+Let's Enclypt環境をitamaeで構築する[1]
+title: CentOS7にPostfix & Dovecot & Let's Enclypt環境をitamaeで構築する[1]
 date: 2018-12-07
 archives: ["2018/12"]
 categories:
