--- a/content/2020/07/08-キビレ35cmゲット.md
+++ b/content/2020/07/08-キビレ35cmゲット.md
@@ -6,6 +6,8 @@ categories:
   - 釣り
 tags:
   - キビレ
+  - チニング
+  - ガルプ
 image: /images/20200708-094828.jpg
 ---
 釣りの記事全然書いてないけど、ちょいちょい行ってます。キスとかメバルを狙いにいく事が多かったのですが、今年はちょっと大きめなお魚さんを狙いにいこうと思っています。
