キビレの記事かいた

--- a/content/2020/07/29-またもガルプ クラビー ２インチでキビレ（40cm）ゲット.md
+++ b/content/2020/07/29-またもガルプ クラビー ２インチでキビレ（40cm）ゲット.md
@@ -10,7 +10,6 @@ tags:
   - ガルプ
   - クラビー２インチ
 image: /images/r6vu4hpngt5xbzg42twnn7s1bwe1ju.jpg
-draft: true
 ---
 最近ハマっているチニング。またしてもキビレをゲットできました！サイズは40cm。これくらいになると結構走りますね。
 
@@ -82,7 +81,7 @@ draft: true
 
 僕はお金のない貧乏サラリーマンアングラーですが、唯一ケチらず丁寧に考えているのがフックです。
 
-一応直リグを作るにあたって、ちゃんとクロダイ用のフックを買っていたのですが、これにしてから乗り切らない。
+一応直リグを作るにあたって、ちゃんとクロダイ用のフックを買っていたのですが、これにしてから乗り切らない（具体的なメーカー名などは避けます）。
 
 帰ったらフックを必ず研いでるし、途中でぬるくなったら交換してます。
 
@@ -100,16 +99,63 @@ draft: true
 
 フっと吸い込んだ感覚。フッキングするなら今だけど、少しロッドを寝かせて送り込み……思いっきりフッキング！！
 
-ようやく乗った！この2日間、ずっとアタリとバラシを繰り返して、自信喪失しそうだったよｗ
+よし、乗った！ようやく乗った！
+
+この2日間、ずっとアタリとバラシを繰り返して、自信喪失状態だったｗ
+
+その後、しっかりランディングして無事ゲットしました。
 
 ## クロダイが釣れたと勘違いする
 
-一応、メインターゲットはクロダイなので、
+一応、メインターゲットはクロダイです。チニングにいっているのにキビレばっかり釣れるキチニング状態ｗ
+
+そして、今回の魚は臀鰭の端が黄色くなかった（ように見えた）ので、ようやくクロダイが釣れた！と勘違いし、超上機嫌で帰路につく。
+
+<div class="balloon_right">
+  <div class="img"><img src="/images/t4traw.jpg"></div>
+  <p>クロッダイが釣っれた！クロッダイが釣っれた！</p>
+</div>
+
+帰りの車で嫁に「いやぁ、クロダイの方が引き強いわー」とか「アタリあったけど乗らなくてさー」などと嫁に軽口をたたく。
+
+クロダイが釣れたら出刃包丁をAmazonで買おうと思っていたので、さっそくiPhoneで注文しました。
+
+いやぁ、これはたまらんね！コンビニに寄って酒でも買って帰ろう！
+
+そしてコンビニの駐車場で嫁と写真を見る。
+
+<div class="balloon_left">
+  <div class="img"><img src="/images/yome.png"></div>
+  <p>これキビレじゃね？</p>
+</div>
+
+なにいってんだ？縦縞もあったし、臀鰭は黄色くなかったじゃん？
+
+そういえば、フラッシュたいて撮影したのもあったな。これ見せてやれば納得するっしょ。
+
+……。
+
+……。
+
+……。
+
+![](/images/fe7urchxh1mifzu0zhk7bkpf12h6h8.jpg)
+
+ん……。
+
+……。
+
+……。
 
 
+![](/images/8oxq0ok1dg5if8bbhscj2xw4jnu7ce.jpg)
 
+あ、これキビレだわ。
 
+紛うとなきキビレだわ。
 
+やだ、恥ずかしい……。「やっぱクロダイの方が引くね！」とか言ってた！[バイツァ・ダスト](https://dic.nicovideo.jp/a/%E3%83%90%E3%82%A4%E3%83%84%E3%82%A1%E3%83%BB%E3%83%80%E3%82%B9%E3%83%88)が使えるなら使いたい！
 
-![](fe7urchxh1mifzu0zhk7bkpf12h6h8)
+というわけで、またクロダイとの出会いを探す旅にでるのでした。
 
+それでは。
