--- a/content/2021/01/04-勇者が魔王を倒した後のエルフのその後を描く葬送のフリーレンがイイ！.md
+++ b/content/2021/01/04-勇者が魔王を倒した後のエルフのその後を描く葬送のフリーレンがイイ！.md
@@ -1,5 +1,5 @@
 ---
-title: 勇者が魔王を倒した後のエルフのその後を描く葬送のフリーレンがイイ！
+title: 勇者が魔王を倒した後のエルフのその後、さらにその後を描く葬送のフリーレンがイイ！
 date: 2021-01-04
 archives: ["2021/01"]
 categories:
@@ -8,26 +8,37 @@ tags:
   - 葬送のフリーレン
   - ファンタジー
   - エルフ
-image: /images/
-draft: true
+image: /images/2021-01-05_09-40-20.png
 ---
 最近、ファンタジー成分が補充したくて、色々小説や漫画を貪っているのですが、また良い作品が見つかったのでご紹介。
 
-勇者達が魔王を倒したその後の世界を描く、『葬送のフリーレン』という漫画がおもしろいです。
+勇者達が魔王を倒したその後の、さらにその後の世界を描く『葬送のフリーレン』という漫画がおもしろいです。
+
+![](/images/2021-01-05_09-40-35.png)
 
 魔王を倒したその後というプロット自体はまあ前にもあった気がするのですが、これはそのパーティの中の長寿種族であるエルフのみが生きているという設定です。
 
-はじめの数ページで主要メンツが老人に！
+![](/images/2021-01-05_09-40-49.png)
 
-そして、フリーレンの旅が始まるのです。
+はじめの数ページで主要メンツが老人に！そしてすぐに勇者様がお亡くなりになり、
 
-ただ、フリーレンは趣味の魔法集めが目的なので、なにか大きな目標があるわけではありません。過去の冒険の軌跡を辿るという不思議なストーリーです。
+![](/images/2021-01-05_09-41-07.png)
 
-ファンタジー物なのにのんびり・ほのぼのしている雰囲気がすごく独特。もちろん、ファンタジーならではの仲間が増えたり戦闘もあります。
+人間を知るという新しい目的を得て、フリーレンの旅が始まります。つまりこれは、魔王を倒したその後のさらにその勇者がいなくなった世界の話。
 
-今は3巻まで発売されていて、少し大きく話が動いてさらにおもしろくなってきました。
+![](/images/2021-01-05_09-41-15.png)
 
-数話だったら公式サイトで見られるので、興味をもった方はぜひ読んでみてください！
+ただ、本来の旅の目的は趣味の魔法集めなので、なにか大きな目標があるわけではありません。過去の冒険の軌跡を辿るという不思議なストーリーです。
+
+そして、フリーレンは長寿種族であるエルフなので、「本の解読？まあ5-6年くらいでできると思うけど」「お花探ししよう。半年から数年くらい」といった人間とは違う時間軸で生きているので、すごくのんびりなんですよね。
+
+この、ファンタジー物なのにのんびり・ほのぼのしている雰囲気がすごく独特。もちろん、ファンタジーならではの仲間が増えたり戦闘もあります。
+
+現在3巻まで発売されていて、少し大きく話が動いてさらにおもしろくなってきました。
+
+1-3話、6話だったら公式サイトで見られるので、興味をもった方はぜひ読んでみてください！
+
+[葬送のフリーレン - サンデーうぇぶり](https://www.sunday-webry.com/detail.php?title_id=1093)
 
 それでは。
 
