過去記事にフォローアップを追加

--- a/content/2019/05/15-091017.md
+++ b/content/2019/05/15-091017.md
@@ -5,11 +5,19 @@ archives: ["2019/05"]
 categories:
   - 便利
 tags:
-  - monosnap
-  - dropshare
+  - Mac
+  - Monosnap
+  - Dropshare
   - s3
+  - スクリーンショット
 image: /images/Screen-Shot-2019-05-15-10-13-01.png
 ---
+<div class="follow-up">
+2021年1月にCleanShot Xに乗り換えました
+
+[CleanShot Xは、遂にたどり着いた完璧なMacのスクリーンショットApp – t4traw.net](https://t4traw.net/2021/01/05-cleanshot-x%E3%81%AF%E9%81%82%E3%81%AB%E3%81%9F%E3%81%A9%E3%82%8A%E7%9D%80%E3%81%84%E3%81%9F%E5%AE%8C%E7%92%A7%E3%81%AAmac%E3%81%AE%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88app/)
+</div>
+
 しばらく愛用していたスクリーンキャプチャApp『Monosnap』ちゃんですが、先日のアップデートで料金プランに変更がありました。
 
 今まではFTPサーバーやAWS S3へのアップロードは無料の範囲内だったのですが、それも有料プランでないとできなくなってしまいました……。
