--- a/posts/2022/01/02-サ道はじめてみました.md
+++ b/posts/2022/01/02-サ道はじめてみました.md
@@ -11,7 +11,7 @@ image: /images/2022-01-02_11-17-07.png
 ---
 みなさんお風呂は好きですか？温泉は好きですか？僕は好きじゃありませんでした。お風呂は嫌いだけど、汗などが嫌いなので、短く１日に２-３回入るタイプでした。
 
-しかし、温泉の風情というか、日本ならではの文化などを味わいたいと思うようになり、さらに水風呂や休憩の仕方を覚えてから温泉がここ１-２年ですっかり温泉好きになってきました♨️
+しかし、温泉の風情というか、日本ならではの文化などを味わいたいと思うようになり、さらに水風呂や休憩の仕方を覚えてから温泉嫌いがここ１-２年ですっかり温泉好きになってきました♨️
 
 そして、温泉に慣れてくると気になるのがあの部屋です。そう、サウナです。
 
