--- a/posts/2022/03/18-とある地方中小企業の一人情シス退職エントリー.md
+++ b/posts/2022/03/18-とある地方中小企業の一人情シス退職エントリー.md
@@ -1,5 +1,5 @@
 ---
-title: とある地方中小企業に16年努めた一人情シスの退職エントリー
+title: とある地方中小企業に16年勤めた一人情シスの退職エントリー
 date: '2022-03-18'
 archives: ["2022/03"]
 categories:
